# course-CMake_basic_to_advanced

./: README.md
After(Depois)/chapter02/lesson01/: CMakeLists.txt
After(Depois)/chapter02/lesson02/: CMakeLists.txt  main.cpp
After(Depois)/chapter02/lesson02/car/: CMakeLists.txt
After(Depois)/chapter02/lesson03/src/main/: CMakeLists.txt
After(Depois)/chapter03/lesson02/: list.cmake
After(Depois)/chapter03/lesson04/: CMakeLists.txt
After(Depois)/chapter03/lesson04/subdir1/: CMakeLists.txt
After(Depois)/chapter04/lesson01/: CMakeLists.txt
After(Depois)/chapter04/lesson02/: CMakeLists.txt
After(Depois)/chapter04/lesson02/src/car/: CMakeLists.txt
After(Depois)/chapter04/lesson02/src/dealership/: CMakeLists.txt
After(Depois)/chapter04/lesson03/: CMakeLists.txt  doxygen.ini
After(Depois)/chapter04/lesson04/: main.cpp
After(Depois)/chapter05/lesson01/: CMakeLists.txt  main.c
After(Depois)/chapter06/lesson03/: string_and_file.cmake
After(Depois)/chapter06/lesson04/: execute_process.cmake
After(Depois)/chapter06/lesson05/: CMakeLists.txt
After(Depois)/chapter07/cmake/: config.cmake
After(Depois)/chapter07/src/main/: CMakeLists.txt  main.cpp
After(Depois)/chapter07/src/xmlHandler/: CMakeLists.txt
After(Depois)/chapter07/tests/cars/: carTest.cpp  mainCarTest.cpp
Before(Antes)/chapter02/lesson01/: main.cpp
Before(Antes)/chapter04/lesson02/src/dealership/: dealership.cpp
Before(Antes)/chapter06/lesson05/: car.cpp
Before(Antes)/chapter07/includes/: car.hpp
Before(Antes)/chapter07/src/dealership/: dealership.hpp
chapter02/lesson01/: CMakeLists.txt
chapter02/lesson03/: CMakeLists.txt
chapter02/lesson03/src/dealership/: CMakeLists.txt  dealership.cpp
chapter02/lesson04/: CMakeLists.txt
chapter02/lesson04/src/: CMakeLists.txt
chapter02/lesson04/src/car/: CMakeLists.txt
chapter02/lesson04/src/main/: main.cpp
chapter03/lesson01/: var.cmake
chapter03/lesson03/: if.cmake
chapter03/lesson04/: CMakeLists.txt  forearch.cmake
chapter03/lesson04/subdir1/subdir2/: CMakeLists.txt
chapter03/lesson06/: CMakeLists.txt
chapter03/lesson06/subdir1/: CMakeLists.txt
chapter03/lesson06/subdir1/subdir2/: CMakeLists.txt
chapter04/lesson04/: CMakeLists.txt
chapter05/lesson02/: CMakeLists.txt
chapter05/lesson03/: CMakeLists.txt
chapter06/lesson02/: functions_and_macros.cmake
chapter07/: CMakeLists.txt
chapter07/src/: CMakeLists.txt
chapter07/src/car/: CMakeLists.txt
chapter07/src/dealership/: CMakeLists.txt
chapter07/src/xmlHandler/: main.c
chapter07/tests/: CMakeLists.txt
chapter07/tests/cars/: CMakeLists.txt  carTest.hpp
