cmake_minimum_required(VERSION 3.6)
project(Car VERSION 1.0 LANGUAGES "CXX")

include_directories(includes)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED true)

set(MY_VARIABLE TEST)

message(NOTICE CMAKE_CXX_STANDARD = ${CMAKE_CXX_STANDARD})
message(NOTICE CMAKE_CXX_STANDARD_REQUIRED = ${CMAKE_CXX_STANDARD_REQUIRED})
message(MY_VARIABLE = "${MY_VARIABLE}")


add_subdirectory(src)